src-tauri/errors.txt
    Checking heychat v1.0.21 (S:\_projects_\_streaming-tools_\heychat\src-tauri)
error[E0597]: `state` does not live long enough
   --> src\kick.rs:178:23
    |
177 |     let state = app.state::<KickState>();
    |         ----- binding `state` declared here
178 |     if let Some(tx) = state.shutdown_tx.lock().unwrap().take() {
    |                       ^^^^^----------------------------
    |                       |
    |                       borrowed value does not live long enough
    |                       a temporary with access to the borrow is created here ...
...
181 | }
    | -
    | |
    | `state` dropped here while still borrowed
    | ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `std::sync::MutexGuard`
    |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
    |
180 |     };
    |      +

For more information about this error, try `rustc --explain E0597`.
error: could not compile `heychat` (bin "heychat") due to 1 previous error
